--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -12,6 +12,35 @@
 		-ms-overflow-style: none; /* IE and Edge */
 		scrollbar-width: none; /* Firefox */
 	}
+
+	code {
+		counter-reset: line;
+	}
+
+	code > [data-line]::before {
+		counter-increment: line;
+		content: counter(line);
+
+		/* Other styling */
+		display: inline-block;
+		width: 1rem;
+		margin-right: 2rem;
+		text-align: right;
+		color: gray;
+	}
+
+	code[data-line-numbers-max-digits="2"] > [data-line]::before {
+		width: 2rem;
+	}
+
+	code[data-line-numbers-max-digits="3"] > [data-line]::before {
+		width: 3rem;
+	}
+
+	code > [data-highlighted-line] {
+		background-color: hsla(59, 100%, 60%, 0.2);
+		background-blend-mode: hue;
+	}
 }
 
 :root {
