balance class added to styles for blog titles

--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -41,6 +41,10 @@
 		background-color: hsla(59, 100%, 60%, 0.2);
 		background-blend-mode: hue;
 	}
+
+	.balance {
+		white-space: collapse balance;
+	}
 }
 
 :root {
